[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PAR"
version = "1.0"
authors = [
  { name="Tim Nguyen", email="tim@thisistim.dev" },
]
description = "Python Automated Reconsusction. A Python package for automated reconstruction of 3D models from 2D images. Designed to work on a wide range of form factors."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Piflyer/PAR"
"Bug Tracker" = "https://github.com/Piflyer/PAR/issues"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.2"
opencv-python = "^4.5.0"
scikit-image = "^0.18.1"
scikit-learn = "^0.24.2"
open3d = "^0.16.0"
matplotlib = "^3.4.2"
scipy = "^1.7.1"
pyserial = "^3.4"
gphoto2 = "^0.7.0"